changed canvas for mobile phones

--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,10 @@ html, body {
             #video-description {
                 font-size: 1rem;
             }            
+            .canvas{
+                position: relative;
+                top: 2px;
+            }
         }
 
 #close-instructions{
