--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,8 @@ html, body {
             .canvas{
                 position: relative;
                 top: 2px;
+                height: 100%;
+                width: 100%;
             }
         }
 
