--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,7 @@ html, body {
                 font-size: 1rem;
             }            
             .canvas{
-                position: relative;
+                position: absolute;
                 top: 2px;
                 height: 100%;
                 width: 100%;
